[tool.poetry]
name = "practice-bot"
version = "0.1.0"
description = ""
authors = ["The Nights Fall"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
discord-pretty-help = "^1.2.2"
praw = "^7.2.0"
tenorpy = "^1.0.4"
TenGiphPy = "^2.5.0"
pytz = "^2021.1"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.3.14"
pafy = "^0.5.5"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
